syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.flink.platform.grpc";
option java_outer_classname = "HelloWorldProto";

import public "google/protobuf/timestamp.proto";
import public "google/protobuf/empty.proto";

// The job service definition.
service JobGrpcService {
  // process job.
  rpc ProcessJob (ProcessJobRequest) returns (ProcessJobReply) {
  }

  // get job status.
  rpc GetJobStatus (JobStatusRequest) returns (JobStatusReply) {
  }

  // kill job.
  rpc KillJob (KillJobRequest) returns (KillJobReply) {
  }
}

message ProcessJobRequest {
  int64 jobRunId = 1;
}

message ProcessJobReply {
  int64 jobRunId = 1;
}

message JobStatusRequest {
  int64 jobRunId = 1;
  string deployMode = 2;
  string backInfo = 3;
  int32 retries = 4;
}

message JobStatusReply {
  int32 status = 1;
  optional int64 startTime = 2;
  optional int64 endTime = 3;
}

message KillJobRequest {
  int64 jobRunId = 1;
}

message KillJobReply {
  int64 jobRunId = 1;
}
